# canvarium-imaginary

./: .gitignore  AURORA_GRADE_CODE_REVIEW.md  AURORA_GRADE_REVIEW_SUMMARY.md  EXECUTIVE_AUDIT.md  README.md  aurora-cull  aurora-cull.py  aurora-grade  pyproject.toml
assets/fonts/: README.md
aurora_cull/: README.md  __init__.py  __main__.py  cli.py
aurora_grade/: README.md  __init__.py  __main__.py  cli.py  export.py  grading_pipeline.py  image_ops.py  manifest.py  palette.py  presets.py  preview.py  transforms.py
docs/: MANUAL_QA.md
docs/aurora-cull/: USAGE.md
docs/aurora-grade/: USAGE.md
tests/: test_aurora_cull.py  test_aurora_grade.py
