[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-grade"
version = "0.1.0"
description = "Deterministic local image grading for AuroraHalo / Canvarium scene packs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "Pillow>=10.0",
]

[project.optional-dependencies]
preview = [
  "opencv-python>=4.9",
]

[project.scripts]
aurora-grade = "aurora_grade.cli:main"
aurora-cull = "aurora_cull.cli:main"

[tool.setuptools.packages.find]
include = ["aurora_grade*", "aurora_cull*"]
